--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <body>
         <nav class="imp">
             <b ><p style="text-align:center; font-size:25px;">INCOME TAX DEPARTMENT</style></b><br>
-            <img src="logo.png" width="100" height="80" alt="jpg"/>
+            <img src="logo.jpg" width="100" height="80" alt="jpg"/>
             <a class="atag" id="atag1" href="#">HOME</a>&nbsp; &nbsp; &nbsp; &nbsp;  
             <a class="atag"href="#">ABOUT US</a>&nbsp; &nbsp; &nbsp;
             <a class="atag"href="#">CONTACT US</a>&nbsp; &nbsp; &nbsp; 
